--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-node_modules/
-builds/
+# OS shit
 .DS_Store
-*/.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon^M^M
+ehthumbs.db
+Thumbs.db
